﻿version 3.3.1
- fixed issue 62 (https://github.com/pchalamet/cassandra-sharp/issues/62)

version 3.3.0
- removed obsolete operations (fluent interface is the way to go)
- log connection building error, avoid GC TcpClient if building goes bad
- simplified command builder extensions - decoupled builder and mapper
- fixed (again) 100% cpu when linux hosted server disconnect
- modified instrumentation interface: TracingSession is now no more available - use ICluster::QueryTracingSession
  when required
- fixed unsigned short problem with map (and other serialization chunks requiring a ushort)
- interface (non prepared query with params) is ready for binary protocol v2 (but no implementation)
- fixed asynchronous worker shutdown in connection
- default consistency level (see TransportConfig.DefaultConsistencyLevel)
- log error when recovery fails
- filtrer invalid rpc address (0.0.0.0) in discovery service SystemPeers
- moved fluent operations (WithXXX) to ICqlCommand (breaking change)
- strongly typed ICqlCommand and IPropertyBagCommand to avoid misleading operation calls
- placement key only available on non prepared statement on Execute()
- placement key can be construct with PlacementKey.From()
- IPartitioner is a new interface allowing pluggin custom partitioner (see ClusterConfig.Partitioner)
- MurmurHash3, Random and Null (default) partitioners are available
- fixed utf8 string deserialization
- fixed issue 59 (https://github.com/pchalamet/cassandra-sharp/issues/59) - release of prepared query is now possible
- Prepared queries are now disposable

version 3.2.2
- fixed issue 49 (https://github.com/pchalamet/cassandra-sharp/issues/49)
- fixed issue 52 (https://github.com/pchalamet/cassandra-sharp/issues/52)
- fixed issue 53 (https://github.com/pchalamet/cassandra-sharp/issues/53)

version 3.2.1
NOT RELEASED
- added releaseNotes to nuget packages

version 3.2.0
- use culture invariant for identifier conversion