@@ -8,6 +8,7 @@
     <changes>
 		<change id="3.3.1"><![CDATA[
 - fixed issue 62 (https://github.com/pchalamet/cassandra-sharp/issues/62)
+- allow asynchronous push of results when buffered reads are enabled (related to issue 62)
 ]]></change>
 	
         <change id="3.3.0"><![CDATA[
